[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "moosermail"
version = "1.1.0"
description = "Terminal email client for Moosermail and Resend inbound mail"
readme = "README.md"
requires-python = ">=3.7"
authors = [
    {name = "moosermail", email = "cloud@creayodev.com"},
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Topic :: Communications :: Email",
]

[project.scripts]
mooser = "inbox:main"

[project.urls]
Homepage = "https://mooser.email"
Repository = "https://github.com/moosermail/moosermail"
